--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -269,6 +269,7 @@ nav {
   bottom: 0;
   left: 0;
   right: 0;
+  height: auto;
   background-color:rgba(0, 0, 0, 0.751);
   transform: translateX(-100%);
   transition: .1s;
